Fixing info popup sizing on smaller screens

--- a/sb-django/drug_price_calculator/static/drug_price_calculator/css/style.css
+++ b/sb-django/drug_price_calculator/static/drug_price_calculator/css/style.css
@@ -161,9 +161,6 @@
 
 /* Info Popup */
 #Popup-Veil #Info-Popup {
-    min-width: 280px;
-    max-width: 580px;
-    width: 100%;
     word-wrap: break-word;
 }
 
